--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -340,12 +340,14 @@ Die auf der Erde gemessene Globalstrahlung setzt sich aus der Diffusstrahlung un
 
 \begin{table}[h]
 \begin{center}
-\resizebox{\textwidth}{!}{
-\begin{tabular}{| p{1.5cm} | p{1.5cm} | p{1.5cm} | p{2cm} | p{1.5cm} | p{2cm} | p{1.5cm} | p{1.7cm} |}
+%\resizebox{\textwidth}{!}{
+\begin{tabular}{| p{1.5cm} | p{1.5cm} | p{1.5cm} | p{2.3cm}  | p{2cm} | p{1.7cm} |}
 \hline
-PV-Anlagen ID & Fläche in $m²$ & Nenn- leistung in $kW$ & Ausrichtung in Grad & Neigung in Grad & Höhen- meter ü. NN & Montierung \\ \hline
-10 & 12,06 & 1,12 & 180 & 40,0 & 1792,8 & Fixiert \\ \hline
-\end{tabular}}
+PV-Anlagen ID & Fläche in $m²$ & Nenn- leistung in $kW$ & Ausrichtung in Grad & Höhen- meter ü. NN & Montierung \\ \hline
+    10 &    12,06 & 1,12 & 180 & 1792,8 & Fixiert \\ \hline
+1199 &  366,54 & 52,92 & 180 & 325,0 & Fixiert \\ \hline
+1200 & 
+\end{tabular}
 \end{center}
 \caption{Metainformationen der Photovoltaikanlagen}
 \label{tab:solarsystem_metadata} 
