--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -336,24 +336,6 @@ Zum flacheren Einstrahlungswinkel in den höheren Breiten kommt hinzu, dass die 
 
 Die auf der Erde gemessene Globalstrahlung setzt sich aus der Diffusstrahlung und Direktstrahlung zusammen. Unter Diffusstrahlung versteht man jene Strahlung, die auf ihrem Weg von der Sonne zur Erde an anderen Atomen reflektiert und dadurch gestreut wurde. Direktstrahlung hingegen wurde nicht abgelenkt und ist dadurch intensiver und gebündelt. Während die Globalstrahlung schon seit geraumer Zeit protokolliert wird,  vermisst der \textit{Deutsche Wetterdienst} erst seit wenigen Jahren auf die horizontale Ebene bezogene Diffusstrahlung. Aus der Differenz der beiden wird die Direktstrahlung berechnet. 
 
-\subsection{Untersuchte Photovoltaikanlagen}
-
-\begin{table}[h]
-\begin{center}
-%\resizebox{\textwidth}{!}{
-\begin{tabular}{| p{1.5cm} | p{1.5cm} | p{1.5cm} | p{2.3cm}  | p{2cm} | p{1.7cm} |}
-\hline
-PV-Anlagen ID & Fläche in $m²$ & Nenn- leistung in $kW$ & Ausrichtung in Grad & Höhen- meter ü. NN & Montierung \\ \hline
-    10 &    12,06 & 1,12 & 180 & 1792,8 & Fixiert \\ \hline
-1199 &  366,54 & 52,92 & 180 & 325,0 & Fixiert \\ \hline
-1200 & 
-\end{tabular}
-\end{center}
-\caption{Metainformationen der Photovoltaikanlagen}
-\label{tab:solarsystem_metadata} 
-\end{table}
-
-
 \newpage
 
 \section{Eigene Fragestellung und methodisches Vorgehen}
@@ -368,8 +350,35 @@ Sofern es gelingt, sämtliche sich variierende Parameter herauszufinden, die die
 
 Eine Unvollkommenheit des Datenmodells ist jedoch die Alterung der Solaranlage, welche dazu führt, dass die Leistungsfähigkeit über die Lebenszeit sich reduziert. Mögliche Konsequenzen wären ältere Daten kontinuierlich auszusortieren und mit das Modell mit den Neusten zu aktualisieren. Es ist davon auszugehen, dass der Alterungsprozess sich nur langsam in den Datensätzen bemerkbar machen wird, weshalb er die Ergebnisse über die kurze Zeitspanne eines Jahres kaum verfälschen dürfte.
 
-Um dieses Ziel zu erreichen, sollen zuerst die Wetter- und Solardaten analysiert werden. Nachdem die Zusammenhänge innerhalb der Datensätze in \autoref{sec:features} erläutert wurden, befassen wir uns in \autoref{sec:algorithm} damit einen passenden Lernalgorithmus für diesen Anwendungsfall zu finden. Sobald ein geeigneter Lernalgorithmus gefunden wurde, thematisieren wir in \autoref{sec:data_preparation}, wie die Daten für den erwählten Lernalgorithmus vorverarbeitet werden müssen. Schließlich erfordern die verschiedenen Lernalgorithmen eine unterschiedliche Datenvorverarbeitung. Dementsprechend ist es wichtig, diese mit dem erwählten Lernalgorithmus abzustimmen. In \autoref{sec:conclusion} soll die Leistungsfähigkeit des Modells beurteilt werden. Dazu betrachten wir vor allem den Determinierungskoeffizienten, der die Abweichung der prognostizierten von den tatsächlichen Werten widerspiegelt. Im letzten \fullref{sec:outlook} soll der Mehrwert dieser Arbeit, insbesondere inwiefern sie dabei helfen kann Schwankungen im Stromnetz zu stabilisieren, diskutiert werden.
+Um dieses Ziel zu erreichen, sollen zuerst die Wetter- und Solardaten analysiert werden. Nachdem die Zusammenhänge innerhalb der Datensätze in \autoref{sec:features} erläutert wurden, befassen wir uns in \autoref{sec:data_algorithm} damit einen passenden Lernalgorithmus für diesen Anwendungsfall zu finden. Sobald ein geeigneter Lernalgorithmus gefunden wurde, thematisieren wir in \autoref{sec:data_algorithm}, wie die Daten für den erwählten Lernalgorithmus vorverarbeitet werden müssen. Schließlich erfordern die verschiedenen Lernalgorithmen eine unterschiedliche Datenvorverarbeitung. Dementsprechend ist es wichtig, diese mit dem erwählten Lernalgorithmus abzustimmen. In \autoref{sec:evaluation} soll die Leistungsfähigkeit des Modells beurteilt werden. Dazu betrachten wir vor allem den Determinierungskoeffizienten, der die Abweichung der prognostizierten von den tatsächlichen Werten widerspiegelt. Im letzten \fullref{sec:outlook} soll der Mehrwert dieser Arbeit, insbesondere inwiefern sie dabei helfen kann Schwankungen im Stromnetz zu stabilisieren, diskutiert werden.
  
+\newpage
+
+\section{Untersuchte Photovoltaikanlagen}
+
+\begin{table}[h]
+\begin{center}
+%\resizebox{\textwidth}{!}{
+\begin{tabular}{| p{1.5cm} | p{1.5cm} | p{1.5cm} | p{2.3cm}  | p{2cm} | p{2.2cm} | p{2cm} |}
+\hline
+PV-Anlagen ID & Fläche in $m²$ & Nenn- leistung in $kW$ & Ausrichtung in Grad & Höhen- meter ü. NN & Koordinaten & Montierung \\ \hline
+  10 &  12,06 &   1,12 & 180 & 1792,8 & \ 39° 74' N \newline   105° 17' W & Fixiert \\ \hline
+1199 & 366,54 &  52,92 & 180 &  325,0 & \ 39° 48' N \newline \  76° 66' W & Fixiert \\ \hline
+1200 & 362,16 &  51,84 & 205 &  155,0 & \ 39° 19' N \newline \  76° 68' W & Fixiert \\ \hline
+1201 & 959.05 & 140,14 & 230 &   18,0 & \ 39° 92' N \newline \  75° 04' W & Fixiert \\ \hline
+1220 &  45.67 &   8,54 & 180 &   75,0 & \ 40° 99' N \newline \  73° 66' w & Fixiert \\ \hline
+1231 &  55,27 &   3,36 & 270 &    2,0 & \ 29° 02' N \newline \  80° 92' W & Fixiert \\ \hline
+1244 &  23,28 &   3,24 & 186 &   10,0 & \ 30° 00' N \newline \  90° 09' W & Fixiert \\ \hline
+1257 &  33,59 &   6,42 & 244 &   10,0 & \ 30° 00' N \newline \  90° 09' W & Fixiert \\ \hline
+
+
+\end{tabular}
+\end{center}
+\caption{Metainformationen der Photovoltaikanlagen}
+\label{tab:solarsystem_metadata} 
+\end{table}
+
+
 \newpage
 
 \section{Zusammenhänge der Merkmale}
@@ -462,8 +471,10 @@ PLOT SIMILAR TEMPERATURE AND RADIATION
 
 \newpage
 
-\section{Datenvorverarbeitung}
-\label{sec:data_preparation}
+\section{Datenvorverarbeitung und Lernalgorithmus}
+\label{sec:data_algorithm}
+
+\subsection{Datenvorverarbeitung}
 
 Für die Forschung dieser Arbeit wurden ein paar Solaranlagen ausgewählt, um zu untersuchen, wie gut anhand von Wetterdaten sich die Solarstromproduktion prognostizieren lässt. Selbst bei den wenigen Solaranlagen, die für diese Forschung verwendet wurden, konnte festgestellt werden, dass die Zusammenhänge zwischen den einzelnen Wettermerkmalen und der erzeugten Strommenge sehr unterschiedlich sein kann.
 
@@ -471,23 +482,19 @@ Auf Grund der Gegebenheit, dass die Zusammenhänge zwischen den Merkmalen und de
 
 Ziel der Datenvorverarbeitung ist es, dass die Daten für den jeweiligen Lernalgorithmus optimiert werden und somit die Leistungsfähigkeit des Modells gesteigert werden kann. Zudem soll somit vermieden werden, dass Unstimmigkeiten innerhalb des Datensatzes die Ergebnisse des Modells verzerren oder gänzlich verfälschen.
 
-\subsection{Ausreißer}
+\subsubsection{Ausreißer}
 
 Selbst wenn für ein Entscheidungsbaum die Datenvorverarbeitung nicht zwingend von Nöten ist, ist es dennoch zu empfehlen Unstimmigkeiten in den Daten zu beseitigen.
 
 Unstimmigkeiten innerhalb des Datensatzes werden häufig als Ausreißer betitelt, da sich nicht zum Muster zwischen ihresgleichen und der Zielvariablen passen. Da solche Ausreißer unausweichlich und in sämtlichen Datensätzen auftauchen können, dürfen diese nicht ungeachtet bleiben. Ein möglicher Grund für etwaige Ausreißer könnte ein defektes Bauteil des Solarsystems sein. Ein nicht funktionierender würde dazu führen, dass trotz idealer Wetterbedingungen die erzeugte Wechselspannung ausbleibt. Umso länger das Solarsystem nicht repariert wird, desto wahrscheinlicher ist es, dass der Fehler übersehen und die Kalenderwoche für die übermäßige Abweichung verantwortlich gemacht wird.
 
-
-\newpage
-
-\section{Lernalgorithmus}
-\label{sec:algorithm}
+\subsection{Lernalgorithmus}
 
 Die Konsequenz, dass die Zusammenhänge zwischen den Merkmalen und der Zielvariablen sehr verschieden sein können, ist es ein Modell auszuwählen, dass für seine Kontingenz gegenüber der Datenvorverarbeitung bekannt ist. 
 
 Ein Entscheidungsbaum \textit{zu engl.: decision tree} hat eine Flussdiagramm ähnliche Baumstruktur, in der je nach ausgewählter Hyperparameter alle möglichen Ergebnisse, Eingabekosten und Nutzen dargestellt werden kann. Da das Modell sowohl für kategoriale als auch kontinuierliche Zielvariablen verwendet werden kann, eignet es sich für die Prognose verschiedener Solaranlagen. 
 
-\subsection{Diskretisierung der Zielvariablen}
+\subsubsection{Diskretisierung der Zielvariablen}
 
 Die Bedingungen werden innerhalb der Entscheidungsknoten aufgestellt. Der Entscheidungsbaum wird so lange durchgegangen, bis man an einem Endknoten angelangt ist. Die Endknoten eines Binärbaums werden als Blätter bezeichnet, sie bilden das Ergebnis für die jeweiligen Eingabedaten ab. Folglich müssen die Bedingungen des Binärbaum von oben nach unten durchgegangen werden, um zu einem Ergebnis zu gelangen. Ein Binärbaum hat die Eigenschaften, dass er maximal $2^{n}$ Blätter besitzen kann, wobei $n$ für die Höhe des Baums steht. Indes es nur so viele Ergebnisse wie Blätter geben kann, muss die Wertemenge der Zielvariablen diskretisiert werden. 
 
@@ -496,7 +503,7 @@ Die diskretisierten Werte werden so ausgewählt, sodass der mittlere quadratisch
 
 %https://www.geeksforgeeks.org/python-decision-tree-regression-using-sklearn/
 
-\subsection{Lineare Beziehungen}
+\subsubsection{Lineare Beziehungen}
 
 Wie so häufig kommen mit den Vorteilen eines Modells auch Nachteile einher. Zu einer der vielen Vorteile von Entscheidungsbäumen gehört die leicht verständliche Darstellung der Entscheidungsprozesse. Das Modell lässt sich als Flussdiagramm darstellen, wodurch sich die Vorhersagen des Modells gut nachvollziehen lassen. Dies ist bei der Fehlersuche und der Interpretierbarkeit von großem Nutzen.
 
@@ -510,7 +517,7 @@ Wie so häufig kommen mit den Vorteilen eines Modells auch Nachteile einher. Zu 
 
 Die Tatsache, dass nichtlineare Beziehungen gut erkannt werden können ist sowohl ein Nachteil als auch ein Vorteil. Viele der Wettermerkmale haben eine nicht-lineare Beziehung zu der erzeugten Strommenge einer Solaranlage. Vor allem sind die Beziehungen bei verschiedenen Solaranlagen unterschiedlich, wodurch die Vorverarbeitung der Daten sich als schwierig darstellt. Insofern ist es ein großer Vorteil, dass die Wetterdaten nicht modifiziert werden müssen. In \autoref{fig:decisiontree_linear} ist jedoch ersichtlich, wie schwer sich ein Entscheidungsbaum mit linearen Beziehungen, wie beim Fall $x=y$, tun kann. Der Entscheidungsbaum kann den Zusammenhang $x=y$ nicht nur sehr limitiert wiedergeben, des Weiteren wird bei gleicher Tiefe des Entscheidungsbaum der Fehler  unabdingbar und maßlos größer, sobald Vorhersagen zu Daten getroffen werden soll, dessen Erwartungswert der Zielvariablen außerhalb des Wertebereichs des Trainingsdatensatz liegt. Das liegt daran, dass nach dem trainieren des Modells die Menge der möglichen Ausgangswerte bestimmt und statisch ist. Betrachte man nochmals \autoref{fig:decisiontree_linear}, so wird ersichtlich, dass für $x>10$ stets $y=11$ prognostiziert wird. Da $x=y$ ist, würde ein optimales Modell für $x=111$ auch $y=111$ vorhersagen. Wie bereits erwähnt würde unser Modell $y=11$ prognostizieren, wodurch wir den quadratischen Fehler $100^{2}=10000$ erhalten. 
 
-\subsection{Aufbau eines Entscheidungsbaum}
+\subsubsection{Aufbau eines Entscheidungsbaum}
 
 Künstliche Intelligenz nimmt eine immer bedeutendere Rolle in unserer heutigen Gesellschaft ein. Bereiche unseres täglichen Lebens werden bereits durch sie erheblich erleichtert. Dennoch schreckt ein Teil der Gesellschaft vor den noch unerforschten Begleiterscheinungen der neuen Technologie zurück. Nicht selten sind die Ergebnisse dieser Algorithmen schwer zu verstehen, wodurch Ungewissheiten hervorgerufen werden. 
 Ein Entscheidungsbaum ist ein Modell aus dem Bereich des maschinellem Lernens, welches wiederum ein Teilgebiet von künstlicher Intelligenz ist. Obwohl Entscheidungsbäume derzeit als äußerst mächtige Lernalgorithmen angesehen werden, sind ihre Prognosen äußerst leicht nachzuvollziehen. Im Grunde genommen ist ein Entscheidungsbaum eine Verkettung von \textit{Wenn-Sonst-Anweisungen}, die schlussendlich zum Ergebnis führen. 
@@ -546,15 +553,15 @@ Anhand der Häufigkeit, in der das Merkmal Sonneneinstrahlung auftritt, lässt s
 
 
 
-\subsection{Schlussfolgerungen für das Training des Modells}
+\subsubsection{Schlussfolgerungen für das Training des Modells}
 
 Aus dieser Eigenschaft von Entscheidungsbäumen müssen zwei Schlussfolgerungen für die Prognose über die Stromerzeugung von Photovoltaikanlagen gezogen werden. 
 
-\subsubsection{Schwierigkeiten bei unbekannten Werten}
+\paragraph{Schwierigkeiten bei unbekannten Werten \newline} 
 
 Zum einem muss das Modell so lange trainiert werden, bis der Trainingsdatensatz alle möglichen Ausgangswerte der Zielvariablen beinhaltet. Da die Jahreszeit nicht nur eine erhebliche Rolle für die Vorhersage spielt, sondern den Maximalertrag eines Tages führend mitbestimmt, definiert sie folglich auch die Wertemenge der Zielvariablen. Somit sollte für jede Solaranlage mindestens ein Jahr lang Daten gesammelt werden. Gewiss kann das Modell bereits zuvor trainiert und für die Prognose verwendet werden, allerdings wird die Prognose weniger präzise, desto größer die Differenz zwischen den für das Training verwendeten Randwerten und den Test- beziehungsweise Produktionsdaten. Im Allgemeinen ist ein Entscheidungsbaum nicht gut darin Vorhersagen für Daten zu treffen, die zuvor nicht im Raum des Trainingsdatensatzes waren.
 
-\subsubsection{Limitierte Wertemenge für mögliche Prognosen}
+\paragraph{Limitierte Wertemenge für mögliche Prognosen}
 
 Die zweite Schlussfolgerung bezieht sich auf die die unterschiedliche Leistung von Solaranlagen. Selbstverständlich haben Photovoltaikanlagen mit qualitativ und quantitativen unterschiedlichen Solarpanelen verschieden hohe Maximalerträge. Folglich ist die Wertemenge der möglichen Ausgangswerte einer Photovoltaikanlage von einem Eigenheim mit weniger Solarmodulen kleiner als die einer häufig größeren, kommerziell genutzten Anlage. Um bei größeren Anlagen die gleiche Auflösung in Bezug auf die Vorhersage zu erhalten, muss die Tiefe des Entscheidungsbaums zunehmen. Da diese die Anzahl der Blätter und somit die Anzahl der möglichen Werte auf direkte Weise steuert. Eine Konsequenz dessen ist, dass die Komplexität zunimmt und das Modell in der Regel einen größeren Trainingsdatensatz benötigt.
 
@@ -716,8 +723,10 @@ Zudem führen wir die Evaluierung mehrmals durch und erhalten dadurch mehrere Ve
 
 \newpage
 
-\section{Zusammenfassung und Fazit}
-\label{sec:conclusion}
+\section{Zusammenfassung und Ausblick}
+\label{sec:conclusion_outlook}
+
+\subsection{Fazit}
 
 Rekapitulierend lässt sich sagen, dass die Prognose über die Stromerzeugung einer Solaranlage mittels maschinellem Lernen realisierbar ist. Verschiedene Solaranlagen haben dazu zwar unbeständige, jedoch nicht grundverschiedene Ergebnisse geliefert. Man kann davon ausgehen, dass die Ursache der Unbeständigkeit in der wechselhaften Qualität der Wetterdaten liegt. Schließlich lässt sich das Wetter über die Schnittstelle der Website \textit{www.visualcrossing.com} für sämtliche Ortschaften abfragen, jedoch ist eine detaillierte flächendeckende Aufzeichnung von einem einzigem Dienstleister als unwahrscheinlich einzustufen\footnote{Zur Kenntnisnahme: Der deutsche Wetterdienst (DWD) ist in Deutschland im Besitz von 83 Wetterstationen.}. Bedauerlicherweise ist die Entfernung zur nächsten Wetterstation nicht im Datensatz dokumentiert, ebenso wenig lassen sich Informationen über mögliche Messabweisungen in den Datensätzen des Wetterdienstleisters finden.
 
@@ -731,10 +740,8 @@ Um auch langfristig treffende Vorhersagen zu machen, muss das Modell selbstverst
 
 \newpage
 
-\section{Ausblick}
-\label{sec:outlook}
-
-
+\subsection{Ausblick}
+\label{subsec:outlook}
 
 
 \end{document}
