updated filter function

--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -502,6 +502,8 @@ Da bei den anderen Werten keine Auffälligkeiten zu verzeichnen sind und deren M
 
 Der Kontrast zwischen \autoref{fig:histogram_cc_1220} und \autoref{fig:histogram_cc_1231} könnte kaum deutlicher sein. Die Verteilung in beiden Histogrammen ist nicht gleichmäßig, allerdings sind die Balken in \autoref{fig:histogram_cc_1220} doch sehr auffällig. Die Werte häufen sich exakt an 5 Stellen, was bedeuten würde, dass sich die Bewölkung in der Stadt Port Chester geradezu sprunghaft verändern würde. Selbst wenn die die Werte nur in einem Zeitintervall von einer Stunde dokumentiert sind, ist die Wahrscheinlichkeit, dass der Wert die tatsächlichen Wetterbedingungen am Himmel widerspiegeln abwegig.
 
+Diese Auffälligkeiten konnten insgesamt an zwei von sieben Wetterstandorten beobachtet werden. Infolgedessen gilt es zu untersuchen, ob die Wetterdaten des jeweiligen Standortes für die Aufnahme in die Merkmalsmatrix qualifiziert sind. Schließlich kann der Bewölkungsgrad sowohl eine Bereicherung für die Prognose sein als auch ein Fluch, wenn es sich bei der Angabe um einen undifferenzierten Schätzwert handelt.
+
 \subsubsection{Überflutung von Daten}
 
 Anhand der Kalenderwochen lässt sich ablesen, dass für die Erstellung der Streudiagramme verwendete Datensatz die Zeitspanne eines halben Jahres umfasst. Durch die große Menge an Datenpunkte werden Streudiagramme, die zwei schwach miteinander korrelierende Variablen beinhalten, häufig unübersichtlich. Die vielen Datenpunkte im Diagramm färben das gesamte Schaubild ein, sodass sich kein Muster mehr erkennen lässt. Wie bei der Heatmap kommt hinzu, dass die Sonneneinstrahlung andere Wetterfaktoren als auch selbst von diesen stark beeinflusst wird. Um Abhilfe zu schaffen, können wir die Daten filtern. Der Zusammenhang zwischen Sonneneinstrahlung und Stromproduktion ist gut erkenntlich. Ohne Zweifel besitzt dieses Merkmal die größte Hebelwirkung auf die Stromproduktion einer Solaranlage. Um besser die Auswirkungen der anderen Merkmale zu studieren, betrachten wir nun ausschließlich Datenreihen in denen der Einstrahlungswert zwischen 550 und 600 $W/ M^2$ liegt. Zuvor umfasste der Datensatz Werte von 0 bis zu 1000 $W/ M^2$.
@@ -514,7 +516,7 @@ Anhand der Kalenderwochen lässt sich ablesen, dass für die Erstellung der Stre
 \label{fig:pairplot_filtered}
 \end {figure}
 
-Betrachten wir nun nochmals die Korrelation zwischen der Temperatur und der Stromproduktion, ist eine negative lineare Beziehung deutlich zu erkennen. Der negative Temperaturkoeffizient $P_MPP$ zeigt sich in der Heatmap ebenfalls ersichtlich, dort erhalten wir diesmal den Wert -0.68. Nachdem wir den Datensatz nach Datenreihen mit ähnlicher Sonneneinstrahlung gefiltert haben, bilden Temperatur und Stromertrag den absolut höchsten Korrelationskoeffizienten innerhalb der Heatmap. Dementsprechend ist die Temperatur nach der Sonneneinstrahlung der zweitwichtigste Wetterfaktor. Wie bereits zuvor erwähnt können Windböen dabei helfen, die Wärme auf den Solarmodule abzutransportieren und somit die Effizienz der Module erhöhen. Inwiefern dies tatsächlich der Fall ist, soll auf die gleiche Art untersucht werden. Folglich schauen wir uns Datenreihen mit ähnlicher Sonneneinstrahlung ein geringer Temperaturschwankung an.
+Betrachten wir nun nochmals die Korrelation zwischen der Temperatur und der Stromproduktion, ist eine negative lineare Beziehung deutlich zu erkennen. Der negative Temperaturkoeffizient $P_MPP$ zeigt sich in der Heatmap ebenfalls ersichtlich, dort erhalten wir diesmal den Wert -0.68. Nachdem wir den Datensatz nach Datenreihen mit ähnlicher Sonneneinstrahlung gefiltert haben, bilden Temperatur und Stromertrag den absolut höchsten Korrelationskoeffizienten innerhalb der Heatmap. Dementsprechend ist die Temperatur nach der Sonneneinstrahlung der zweitwichtigste Wetterfaktor. Wie bereits zuvor erwähnt können Windböen dabei helfen, die Wärme auf den Solarmodule abzutransportieren und somit die Effizienz der Module erhöhen. Inwiefern dies tatsächlich der Fall ist, soll auf die gleiche Art untersucht werden. Folglich schauen wir uns Datenreihen mit ähnlicher Sonneneinstrahlung einer geringen Temperaturschwankung an.
 
 PLOT SIMILAR TEMPERATURE AND RADIATION
 
